# direct-typer

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
direct_typer/: __init__.py  cgevent.py  main.py  typer.py
examples/: demo.py
tests/: __init__.py  test_main.py  test_postprocessor.py  test_typer.py
